# Chess

./: .gitignore  AI.c  AI.h  BoardLayout.c  BoardLayout.h  Button.c  Button.h  CMakeLists.txt  ChessMainWindow.c  ChessMainWindow.h  ColorWindow.c  ColorWindow.h  ConsoleGameState.c  ConsoleGameState.h  ConsoleManager.c  ConsoleManager.h  ConsoleSettingsState.c  ConsoleSettingsState.h  DifficultyWindow.c  DifficultyWindow.h  GUIManager.c  GUIManager.h  GameBoard.c  GameBoard.h  GameLayout.c  GameLayout.h  GameManager.c  GameManager.h  GameState.c  GameState.h  GameWindow.c  GameWindow.h  History.c  History.h  Infrastructure.h  LoadGameWindow.c  LoadGameWindow.h  Location.c  Location.h  MainWindow.c  (+33 more)
